syntax = "proto3";

package grpc;

option go_package = "github.com/anibalox/distribuidosproyecto";

message SituacionReq{
    int32 peticion = 1;
}

message SituacionResp{
    int32 resuelta = 1;
    string nro_escuadra = 2;
    string nro_lab = 3;
}
service CentralService{
    rpc AbrirComunicacion(stream SituacionResp) returns (stream SituacionReq);
}
